--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,11 +48,15 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 # Start essential services and apps
-exec-once = waybar & hyprpaper & firefox 
+exec-once = waybar & hyprpaper & brave
 exec-once = nm-applet &
 exec-once = mako
-exec-once = code
+exec-once = obsidian
 exec-once = $terminal # Starts kitty 
+exec-once = lxqt-policykit-agent &
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -219,7 +223,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -232,9 +235,22 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+# Window focus (hjkl = vim style)
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
+
+# Move windows around
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, j, movewindow, d
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, M, fullscreen, m
+
 bind = SUPER, F, exec, MOZ_ENABLE_WAYLAND=1 firefox
 # ~/.config/hypr/hyprland.conf
-bind = $mainMod,SPACE,exec,wofi --show=drun
+bind = $mainMod,SPACE,exec,wofi --show=drun --allow-images
 
 
 
