--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -1,30 +1,17 @@
-[wofi]
-show            = drun
-mode            = drun
+# ---- Wofi Everforest Squared ----
 
-location        = center
-anchor          = center
-width           = 20%
-height          = 30%
-grid            = true
-columns         = 2
-rows            = 2
+show=drun                # combine run + desktop entries
+prompt=>                 # matches ROFI arrow
+location=center
+width=780
+lines=8
+columns=2
+allow_markups=true       # let Pango markup work if you use icons
+allow_images=true        # enable entry icons
+hide_scroll=false
+insensitive=true         # case-insensitive search
+normal_window=false      # use layer-shell (Wayland proper)
+matching=fuzzy           # nicer than "contains"
 
-fuzzy           = true
-cycle           = true
-hide-scrollbar  = true
-page-up         = Page_Up
-page-down       = Page_Down
-
-font            = "JetBrains Mono 12"
-show-icons      = true
-icon-size       = 24
-
-element-height  = 36
-line-height     = 1.4
-indicator-width = 4
-margin          = 16
-border          = 0
-corner-radius   = 12
 
 style           = /home/jeri/.config/wofi/style.css
